# pixibixi.github.io

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  README.md  index.html  llms.txt  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  robots.txt  sitemap.xml  tags.json
.github/workflows/: main.yml
.pre-commit-hooks/: convert_to_webp.sh
about/: index.html
assets/javascripts/: bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.d7400e89.min.js
automation/: index.html
ci-cd/: index.html
cisco/cdp/: index.html
cisco/commandes_base/: index.html
cisco/dns/: index.html
cisco/lldp/: index.html
cisco/qos/: index.html
cisco/routage_vlan/: index.html
cisco/security/: index.html
cisco/serveur_dhcp/: index.html
cisco/ssh/: index.html
cisco/stp/: index.html
cisco/vlan/: index.html
cloud/: index.html
code/st3/: index.html
containers/: index.html
containers/docker/: index.html
databases/: index.html
docker/: index.html
docker/use_proxy/: index.html
docs/: CNAME  about.md  docker.md  github.md  guacamole.md  index.md
docs/automation/: .meta.yml  index.md
docs/ci-cd/: .meta.yml  index.md
github/: index.html
guacamole/: index.html
hardware/: index.html
hypervisor/: index.html
kubernetes/: index.html
linux/: index.html
misc/: index.html
monitoring/: index.html
networking/: index.html
os/: index.html
overrides/: main.html  sitemap.xml
search/: search_index.json
selfhost/: index.html
site/: 404.html  index.html
stylesheets/: jdelgado.css
web/: index.html
(+1059 files in other folders)
